--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 # Logs
-logs
-*.log
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -12,6 +11,7 @@ dist
 dist-ssr
 *.local
 qp.txt
+.env
 
 # Editor directories and files
 .vscode/*
